--- a/myQRcode/Storyboards/Base.lproj/Generate.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/Generate.storyboard
@@ -67,7 +67,7 @@
                                                     <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                                     <state key="normal" title="Generate QR code"/>
                                                     <connections>
-                                                        <action selector="generateButtonAction:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="KEP-5k-cNQ"/>
+                                                        <action selector="generateButtonPressed:" destination="0zn-sQ-Gnv" eventType="touchUpInside" id="pbe-9t-zLq"/>
                                                     </connections>
                                                 </button>
                                             </subviews>
@@ -164,6 +164,26 @@
                                         </tableViewCellContentView>
                                         <connections>
                                             <segue destination="6YY-1Z-bav" kind="presentation" identifier="GenerateToTemplateSegue" id="Ilk-wE-B6U"/>
+                                        </connections>
+                                    </tableViewCell>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="vZP-N5-XQU" style="IBUITableViewCellStyleDefault" id="qXI-71-Ho1">
+                                        <rect key="frame" x="16" y="585.5" width="343" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="qXI-71-Ho1" id="Ef1-1h-UVk">
+                                            <rect key="frame" x="0.0" y="0.0" width="316.5" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="GENERATE_USE_LAST_TEMPLATE_AGAIN" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="vZP-N5-XQU">
+                                                    <rect key="frame" x="16" y="0.0" width="292.5" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="Yqg-wX-zaE" kind="presentation" identifier="reuseTemplateSegue" id="H4l-Iu-rnt"/>
                                         </connections>
                                     </tableViewCell>
                                 </cells>
@@ -412,6 +432,9 @@
             <point key="canvasLocation" x="2852" y="-1003.4482758620691"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="H4l-Iu-rnt"/>
+    </inferredMetricsTieBreakers>
     <resources>
         <image name="Blank QR" width="258" height="258"/>
         <image name="Generate-Icon" width="25" height="25"/>
